--- a/pom.xml
+++ b/pom.xml
@@ -62,5 +62,12 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.18.2</version>
         </dependency>
+
+        <!-- not really needed, can be removed if jar size is a concern -->
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>com-google-guava</artifactId>
+            <version>RELEASE113</version>
+        </dependency>
     </dependencies>
 </project>
