--- a/pom.xml
+++ b/pom.xml
@@ -83,11 +83,10 @@
             <version>2.18.2</version>
         </dependency>
 
-        <!-- not really needed, can be removed if jar size is a concern -->
         <dependency>
-            <groupId>org.netbeans.external</groupId>
-            <artifactId>com-google-guava</artifactId>
-            <version>RELEASE113</version>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>33.4.0-jre</version>
         </dependency>
 
         <!-- Inversion of Control - compile-time DI https://dagger.dev/dev-guide/ -->
@@ -95,6 +94,12 @@
             <groupId>com.google.dagger</groupId>
             <artifactId>dagger</artifactId>
             <version>2.54</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.24.3</version>
         </dependency>
     </dependencies>
 </project>
